Fixed contrast for colored buttons

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-around;
   border-radius: 5px;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0.03);
   font-size: 25px;
   font-weight: bold;
   margin: 20px 0;
